sass/modules/post-card/_post-card.scss
// Archive Post Title
.page-header {
  border-left: 4px solid #dfe2e9;
  padding-left: 45px;
  margin-bottom: 50px;

  @include rmaxwd(991) {
    padding-left: 30px;
  }
  .page-title {
    font-size: 48px;
    line-height: 60px;

    @include rmaxwd(991) {
      font-size: 38px;
      line-height: 48px;
    }
  }
}
// Blog Details Page
.blog-area {
  ol,
  ul{
    padding-left: 20px;

    li {
      padding-top: 7px;
    }
  }
}
.blog-details-wrapper {
  .comment-respond {
    margin-top: 78px;
    margin-bottom: 40px;
  }
  .post-comments {
    margin-top: 70px;
  }
  .wp-block-group.has-background {
    .wp-block-button {
      .wp-block-button__link {
        color: $white !important;
      }
    }
  }
  .single-post-item {
    border: 0;
    overflow: visible;

    iframe {
      width: 100%;
      height: 522px;
    }
    .post-meta {
      margin-bottom: 20px;
    }
    .post-gallery {
      &:hover {
        img {
          transform: scale(1) !important;
        }
      }
    }
    .post-thumbnail,
    .post-video,
    .post-gallery,
    .postbox-audio,
    .wp-block-post-featured-image {
      border-radius: 12px;
      overflow: hidden;
      margin-bottom: 45px;
      position: relative;

      @include rmaxwd(767) {
        margin-bottom: 30px;
      }
      &:hover {
        img {
          transform: scale(1.06);
          @include transition;
        }
      }

      img {
        transform: scale(1);
        @include transition;
      }

    }
    .post-content-wrapper {
      padding: 0 0 10px 0;
    }
    .post-content {
      margin-bottom: 17px;
      /* Unit Test Data Compatibility Start */

      .wp-block-query .wp-block-post-template {
        padding-left: 0;

        .wp-block-post {
          margin-bottom: 30px;
        }
      }
      .wp-block-navigation__responsive-container-content {
        .wp-block-page-list {
          padding-left: 0;
        }
      }

      .wp-block-group {
        margin: 15px 0;
        p {
          margin-bottom: 0;
        }
      }
      /* Unit Test Data Compatibility End */
      p {
        margin-bottom: 20px;

        img {
          margin: 20px 0;
          border-radius: 8px;
        }
      }
    }
    .blog-post-tag {
      .social-share {
        padding-bottom: 20px;
      }
    }
  }
  .wp-block-calendar {
    margin-bottom: 30px;
  }
}
// Blog Details End

// Standard Blog Post
.single-post-item {
  background-color: $white;
  border-radius: 12px;
  overflow: hidden;
  margin-bottom: 48px;
  border: 1px solid $gray-300;


  &:hover {
    // Post Image
    .post-thumbnail,
    .post-video {
      img {
        transform: scale(1.06);
        @include transition;
      }
    }
  }

  iframe {
    width: 100%;
    height: 522px;

    @include sm {
      height: 350px;
    }
  }
  .post-content-wrapper {
    padding: 45px 47px 41px 47px;

    @include sm {
      padding: 35px;
      padding-top: 30px;
    }
    .read-more {
      margin-top: 30px;
      margin-bottom: 6px;
      display: flex;
      justify-content: space-between;
      align-items: center;
      flex-wrap: wrap;
      gap: 30px;
    }
  }
  /* Quote Format Post */
  &.format-quote {
    .post-content {
      margin: 0;
    }
    blockquote {
      margin: 0;
      p {
        margin-top: 0;
      }
      cite {
        a {
          font-family: $body-font;
          font-size: 16px;
          font-weight: 600;
          text-transform: capitalize;
          color: $text-color;
          margin-top: 20px;
          font-style: normal;
          @include transition;

          &:hover {
            @include transition;
            color: $primary-color;
          }
        }
      }
    }
  }
  /* Sticky Post */
  &.sticky {
    border: 2px solid $primary-color;

    .post-content {
      margin-bottom: 0;
      p {
        margin-bottom: 0;
      }
    }
  }

  .post-title {
    font-size: 36px;
    line-height: 54px;
    font-weight: 700;
    //margin-bottom: 10px;
    margin-bottom: 0;

    @include sm{
      font-size: 28px;
      line-height: 42px;
      margin-top: 5px;
      //margin-bottom: 5px;
    }

    &:hover {
      a {
        color: $primary-color;
        @include transition;
      }
    }
  }
  .post-content {
    p {
      margin-top: 17px;
    }

    h2,
    h3,
    h4,
    h5,
    h6{
      margin-bottom: 10px;
    }

    p {
      margin-bottom: unset;
    }

  }

  .single-post-meta {
    display: inline-flex;
    align-items: flex-start;
    padding-top: 15px;
    margin-top: 30px;
    margin-bottom: 20px;
    flex-direction: column;
    width: 100%;
  }
  // Social Share
  .social-share {
    display: flex;
    gap: 17px;
    align-items: center;
    justify-content: center;

    a {
      &.facebook {
        color: #1877f2;
      }
      &.twitter {
        color: #1da1f2;
      }
      &.linkedin {
        color: #1a70c6;
      }
    }

    .social-share-title {
      font-size: 16px;
      font-weight: 700;
      font-family: $heading-font;
      color: $secondary-color;
      margin-right: 5px;
      text-transform: uppercase;
    }
  }
  // Post Tags
  .blog-post-tag {
    width: 100%;
    display: inline-block;

    span {
      font-size: 16px;
      font-weight: 700;
      display: inline-block;
      font-family: $heading-font;
      color: $secondary-color;
      margin-bottom: 0;
      margin-right: 30px;
      text-transform: uppercase;
      margin-top: 8px;
      float: left;
    }
    .post-tag-list {
      display: flex;
      flex-wrap: wrap;
      gap: 10px;
      align-items: center;

      a {
        color: $text-color;
        display: inline-block;
        font-size: 16px;
        line-height: 1;
        padding: 12px 22px;
        border-radius: 50px;
        @include transition;
        border: 1px solid $white-50;

        &:hover {
          color: $white;
          background: $primary-color;
          border-color: $primary-color;
          @include transition;
        }
      }
    }
  }

  // Post Image
  .post-thumbnail,
  .post-video {
    position: relative;
    overflow: hidden;

    img {
      transform: scale(1);
      @include transition;
    }

    .popup-video-wrapper {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    .video-btn {
      a {
        width: 70px;
        height: 70px;
        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
        background-color: #FFFFFF;
        border-radius: 50%;
        background-size: cover;
        background-repeat: no-repeat;
        animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
        display: flex;
        align-items: center;
        justify-content: center;

        i {
          color: $primary-color;
          font-size: 18px;
        }
        &:hover {
          animation: none;
        }
      }

    }

  }
  // Post Gallery Slick Button
  button.post-gallery-btn {
    position: absolute;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    transition: 0.3s;
    z-index: 99;
    background-color: #ffffff;
    cursor: pointer;
    top: 50%;
    transform:translateY(-50%);
    overflow: hidden;

    &.prev-btn {
      left: 30px;
    }
    &.next-btn {
      right: 30px;
    }
    i{
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      color: $secondary-color;
      font-size: 17px;
      @include transition;
    }
    &:hover{
      @include transition;
      background-color: $primary-color;

      i{
        color: $white;
        @include transition;
      }
    }
  }

  // Post Audio
  .post-audio {
    iframe {
      width: 100%;
    }
  }
  // Post Meta
  .post-meta {
    display: flex;
    align-items: center;
    gap: 32px;
    margin-bottom: 2px;
    flex-wrap: wrap;

    @include sm {
      gap: 10px;
      flex-direction: column;
      width: 100%;
      align-items: flex-start;
    }
    span {
      font-size: 18px;
      font-weight: 400;
      color: $text-color;
      text-transform: capitalize;
      display: flex;
      align-items: center;
      gap: 10px;

      i {
        color: $sky-color;
        font-size: 18px;
      }
      a {
        display: flex;
        align-items: center;
        gap: 10px;
        color: $text-color;
        @include transition;

        &:hover {
          color: $primary-color;
          @include transition;

          i {
            color: $primary-color;
            @include transition;
          }
        }
      }
    }
  }

}

// Author
.author-info {
  background-color: $gray-50;
  padding: 90px 45px 45px 45px;
  display: flex;
  gap: 30px;
  border-radius: 14px;
  flex-direction: column;
  position: relative;
  justify-content: center;
  text-align: center;
  margin-top: 130px;
  margin-bottom: 70px;

  .author-thumb {
    flex-shrink: 0;
    width: 120px;
    height: 120px;
    border-radius: 50px;
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);

    img {
      border-radius: 50%;
    }
  }
  .author-text {
    h3 {
      font-size: 24px;
      font-weight: 700;
      margin-bottom: 10px;
      line-height: 28px;
    }
    .designation {
      font-size: 16px;
      font-style: italic;
      color: #9ba8c3;
    }
    p {
      margin-top: 30px;
      margin-bottom: 0;
    }
  }
  .author-social-profiles {
    margin-top: 20px;
    display: flex;
    gap: 10px;
    justify-content: center;

    a {
      font-size: 18px;
      color: $white;
      @include transition;
      width: 44px;
      height: 44px;
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: $primary-color;
      border-radius: 10px;
      &:hover {
        @include transition;
        background-color: $white;
        color: $primary-color;
      }
    }
  }
  .author-post {
    a {
      font-size: 16px;
      font-weight: 700;
      font-family: $heading-font;
      color: $secondary-color;
      border-bottom: 2px solid $orange-color;
      margin-top: 30px;
      display: inline-block;

      &:hover {
        color: $orange-color;
      }
    }
  }
}


// Next Prev Post
.blog-post-nav {
  margin: 40px 0;
  background: #fff;
  padding: 23px 30px;
  padding-bottom: 22px;
  border-radius: 8px;
  border: 1px solid rgb(223, 226, 233);
  display: flex;
  justify-content: space-between;
  gap: 30px;

  @include rmaxwd(767) {
    flex-direction: column;
    padding: 30px;
    margin: 30px 0;
  }

  .divider {
    background-color: rgb(223, 226, 233);
    width: 1px;

    @include rmaxwd(767) {
      width: 100%;
      height: 1px;
    }
  }

  .post-navigation {
    display: flex;
    gap: 20px;
    flex-basis: 0;
    flex-grow: 1;
    width: 50%;

      &:last-child {
        flex-direction: row-reverse;

        .text {
          text-align: right;
        }
      }
    .post-img {
      width: 96px;
      height: 96px;
      position: relative;
      border-radius: 6px;
      overflow: hidden;
      flex-shrink: 0;

      img {
        position: absolute;
        width: 100%;
        height: 100%;
        object-fit: cover;
        left: 0;
        top: 0;
      }
    }
    .text {
      width: 100%;

      span {
        font-size: 14px;
        font-family: $heading-font;
        text-transform: uppercase;
        font-weight: 700;
        display: block;
        color: #ff5b5b;
      }
      h4 {
        font-size: 21px;
        margin: 0;
        line-height: 30px;
        text-transform: capitalize;
      }
    }
  }
}

